welcome.lessons.welcome.array.has271.Has271.scala.error
has271:3: error: type mismatch;
 found   : Array[Int]
 required: Int
 for (i <- 2 to nums){
                ^